--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -11,11 +11,7 @@
 }
 
 html {
-    font-size: 0.5px;
-
-    @include media(480) {
-        font-size: 0.6px;
-    }
+    font-size: 0.6px;
 
     @include media(1024) {
         font-size: 0.75px;
@@ -641,10 +637,11 @@ footer {
 }
 
 .swiper {
+    display: block !important;
     padding-top: 50rem;
 
     @include media(662) {
-        display: none;
+        display: none !important;
     }
 }
 
