--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -511,6 +511,12 @@ footer {
     }
 }
 
+.confidentiality {
+    a:hover {
+        text-decoration: none;
+    }
+}
+
 .footer-top-section {
     flex-direction: column;
     justify-content: center;
@@ -685,6 +691,7 @@ footer {
 }
 
 .page-title-container {
+    padding-top: 196rem;
     max-width: 764rem;
     margin-bottom: 196rem;
 
@@ -695,7 +702,6 @@ footer {
         font-weight: 300;
         line-height: 0.833em;
         text-transform: uppercase;
-        padding-top: 193rem;
         margin-bottom: 32rem;
     }
 
@@ -794,16 +800,124 @@ footer {
 
 .blog {
     margin-bottom: 201rem;
+
     .page-title-container {
         max-width: 651rem;
     }
 }
 
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 450px) {
+
     .button-border,
     .button-transparent,
     .button-primary {
         font-size: 28rem;
+    }
+}
+
+.blog {
+    h1 {
+        color: #121212;
+        font-size: 96rem;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 90rem;
+        /* 93.75% */
+        text-transform: uppercase;
+    }
+}
+
+.article {
+    padding-top: 196rem;
+
+    h1 {
+        margin-bottom: 180rem;
+    }
+}
+
+.blog-article {
+    max-width: 993rem;
+
+
+    h2 {
+        color: #121212 !important;
+        font-family: Poppins, sans-serif !important;
+        font-size: 64rem !important;
+        font-weight: 300 !important;
+        line-height: 60rem !important;
+        text-transform: uppercase !important;
+        margin-bottom: 34rem !important;
+    }
+
+    h3 {
+        color: #121212 !important;
+        font-family: Poppins, sans-serif !important;
+        font-size: 48rem !important;
+        font-weight: 300 !important;
+        line-height: 45rem !important;
+        text-transform: uppercase !important;
+        margin-bottom: 29rem !important;
+    }
+
+    h4 {
+        color: #121212 !important;
+        font-family: Poppins, sans-serif !important;
+        font-size: 32rem !important;
+        font-weight: 300 !important;
+        line-height: 45rem !important;
+        text-transform: uppercase !important;
+        margin-bottom: 29rem !important;
+    }
+
+    p {
+        color: #121212 !important;
+        font-family: Poppins, sans-serif !important;
+        font-size: 32rem !important;
+        font-weight: 300 !important;
+        line-height: 32rem !important;
+        text-transform: uppercase !important;
+        margin-bottom: 35rem !important;
+    }
+
+    img {
+        width: 100%;
+        max-width: 993rem !important;
+        aspect-ratio: 1 / 1 !important;
+        object-fit: cover !important;
+    }
+}
+
+.legal {
+    h1 {
+        font-size: 80rem;
+    }
+    max-width: 993rem;
+    margin-bottom: 100rem;
+    h2 {
+        font-size: 40rem;
+        margin-top: 60rem;
+        margin-bottom: 20rem;
+    }
+
+    h3 {
+        font-size: 30rem;
+        font-weight: 500;
+        margin: 20rem 0;
+    }
+    p, ul, li, strong, address, h3{
+        font-size: 25rem;
+    }
+
+    strong {
+        font-weight: 400;
+    }
+
+    ul {
+        padding-left: 35rem;
+    }
+
+    address {
+        margin-top: 30rem;
     }
 }
