viewport admin auth

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -621,6 +621,12 @@ footer {
     }
 }
 
+.portfolio-cards {
+    h2 {
+        margin-bottom: 26rem;
+    }
+}
+
 .portfolio {
     margin-bottom: 192rem;
 
