--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -150,6 +150,10 @@ a {
     img {
         max-height: 54px;
     }
+
+    .button-border {
+        font-size: 24rem;
+    }
 }
 
 .burger-menu a,
@@ -445,6 +449,32 @@ h2 {
     }
 }
 
+.step-images-mobile-slider {
+    display: flex;
+    @include media(769) {
+        display: none;
+    }
+}
+
+.step-images-mobile-slider {
+    width: 100%;
+    overflow: hidden;
+}
+
+.step-images-mobile-slider .swiper-slide {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    
+}
+
+.step-images-mobile-slider img {
+    width: 100%;
+    aspect-ratio: 1 / 1.2;
+    display: block;
+}
+
+
 .how-we-work__steps {
     --bs-gutter-x: 30rem !important;
 }
@@ -452,6 +482,12 @@ h2 {
 .step-image-container {
     position: relative;
     padding-top: 62.4rem;
+    .step-image {
+        display: none;
+        @include media(769) {
+            display: block;
+        }
+    }
 }
 
 .get-involved {
@@ -644,7 +680,7 @@ footer {
         aspect-ratio: 1/1;
         @include media (768) {
             height: 450rem;
-            
+
         }
     }
 
@@ -687,7 +723,7 @@ footer {
     .g-5 {
         --bs-gutter-x: 20rem !important;
         --bs-gutter-y: 20rem !important;
-        
+
         @include media(620) {
             --bs-gutter-x: 50rem !important;
             --bs-gutter-y: 50rem !important;
@@ -1010,7 +1046,9 @@ footer {
 
     img {
         width: 100%;
+        height: 100%;
         aspect-ratio: 1 / 1;
+        object-fit: cover;
     }
 
     h1 {
@@ -1053,9 +1091,16 @@ footer {
         }
 
         textarea {
-            padding: 20rem;
-            min-height: 300rem;
+            height: 100rem;
+            padding: 19rem 22rem;
+            margin-bottom: 25rem;
             resize: none;
+            &[name="project_details"] {
+                height: 200rem;
+            }
+            &:last-child {
+                margin-bottom: 50rem;
+            }
         }
 
         input[type=email].email {
@@ -1208,7 +1253,7 @@ footer {
 
         tr {
             border-top: 0.8px solid rgba(18, 18, 18, 0.70);
-            
+
             &:last-child {
                 border-bottom: 0.8px solid rgba(18, 18, 18, 0.70);
             }
