--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -459,6 +459,7 @@ h2 {
 .step-images-mobile-slider {
     width: 100%;
     overflow: hidden;
+    margin-bottom: 30rem;
 }
 
 .step-images-mobile-slider .swiper-slide {
