--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -132,7 +132,7 @@ a {
     left: 0;
     z-index: 999999;
     background: rgba(18, 18, 18, 0.50);
-    padding: 8rem 0;
+    padding: 15rem 0;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     transition: 0.3s;
@@ -157,10 +157,16 @@ a {
     }
 }
 
+.logo-navigation > a {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
 .header-line img,
 .footer-top-section > img {
-    width: 108rem;
-    height: 56rem;
+    width: 121.5rem;
+    height: 63rem;
 
     @include media(620) {
         width: 135rem;
